[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Randomize" type="Button" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 78.0
margin_right = 163.0
margin_bottom = 98.0
text = "Randomize"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Package" type="Button" parent="CanvasLayer"]
margin_left = 249.5
margin_top = 75.5
margin_right = 332.5
margin_bottom = 95.5
text = "Package"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instance" type="Button" parent="CanvasLayer"]
margin_left = 249.0
margin_top = 109.0
margin_right = 332.0
margin_bottom = 129.0
text = "Instance"

[node name="Save" type="Button" parent="CanvasLayer"]
margin_left = 421.0
margin_top = 76.0
margin_right = 504.0
margin_bottom = 96.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="CanvasLayer"]
margin_left = 421.0
margin_top = 109.0
margin_right = 504.0
margin_bottom = 129.0
text = "Load"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 80.5
margin_top = 36.5
margin_right = 120.5
margin_bottom = 50.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Original" type="Node2D" parent="."]
position = Vector2( 133.342, 315.893 )

[node name="icon" type="Sprite" parent="Original"]
texture = ExtResource( 1 )

[node name="icon" type="Sprite" parent="Original/icon"]
position = Vector2( -0.626572, 47.9372 )
scale = Vector2( 0.506, 0.567 )
texture = ExtResource( 1 )

[node name="icon2" type="Sprite" parent="Original/icon"]
position = Vector2( 41.8387, 55.5052 )
rotation = 0.380482
scale = Vector2( 1, 0.229 )
texture = ExtResource( 1 )

[node name="icon3" type="Sprite" parent="Original/icon"]
position = Vector2( -40.5692, 61.812 )
rotation = -0.671952
scale = Vector2( 1, 0.229 )
texture = ExtResource( 1 )

[node name="icon4" type="Sprite" parent="Original/icon"]
position = Vector2( 19.1344, 94.6069 )
rotation = 1.22173
scale = Vector2( 1, 0.229 )
texture = ExtResource( 1 )

[node name="icon5" type="Sprite" parent="Original/icon"]
position = Vector2( -17.865, 93.7661 )
rotation = -1.18682
scale = Vector2( 1, 0.229 )
texture = ExtResource( 1 )

[node name="CloneParent" type="Node2D" parent="."]
position = Vector2( 372.811, 315.622 )

[connection signal="pressed" from="CanvasLayer/Randomize" to="." method="Randomize_pressed"]
[connection signal="pressed" from="CanvasLayer/Package" to="." method="Package_pressed"]
[connection signal="pressed" from="CanvasLayer/Instance" to="." method="Instance_pressed"]
[connection signal="pressed" from="CanvasLayer/Save" to="." method="Save_pressed"]
[connection signal="pressed" from="CanvasLayer/Load" to="." method="_on_Load_pressed"]
